feat(user-courses): Better offset calculation / custom dto name changes